[System.Serializable]
public class DictionaryData
{
    public int id;
    public string name;
}