[System.Serializable]
public class LevelData
{
    public int id;
    public int level;
    public int points;
}