[System.Serializable]
public class LevelWordData
{
    public int id;
    public int levelid;
    public int wordid;
}