[System.Serializable]
public class PlayerData {
    public int id;
    public string userid;
    public string name;
    public int curlevel;
    public int score;
}